[package]
name = "http_io"
version = "0.2.15"
authors = ["Remi Bernotavicius <remi@abort.cc>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/bobbobbio/http_io"
homepage = "https://github.com/bobbobbio/http_io"
description = """
A library with limited dependencies containing an HTTP client and server.
"""
readme = "README.md"

[badges]
travis-ci = { repository = "bobbobbio/http_io" }

[features]
default = ["std", "openssl"]
std = []

[dependencies]
hashbrown = "^0.3"
openssl = { version = "^0.10", optional = true }

[dev-dependencies]
structopt = "0.3.7"
