[package]
name = "http_io"
version = "0.3.0"
authors = ["Remi Bernotavicius <remi@abort.cc>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/bobbobbio/http_io"
homepage = "https://github.com/bobbobbio/http_io"
description = """
A library with limited dependencies containing an HTTP client and server.
"""
readme = "README.md"

[badges]
travis-ci = { repository = "bobbobbio/http_io" }

[features]
default = ["std", "ssl-native-tls"]
ssl-openssl = ["ssl", "openssl"]
ssl-rustls = ["ssl", "rustls", "webpki-roots", "rustls-pemfile"]
ssl-native-tls = ["ssl", "native-tls"]
std = []
ssl = []

[dependencies]
hashbrown = "*"
openssl = { version = "*", optional = true }
rustls = { version = "^0.20.8", optional = true }
webpki-roots = { version = "^0.26.0", optional = true }
rustls-pemfile = { version = "^2.0.0", optional = true }
native-tls = { version = "*", optional = true }
url = { version = "2.5.3", default-features = false }

[dev-dependencies]
clap = { version = "*", features = ["derive"] }
